--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,12 @@
-absl-py==1.4.0
-ale-py
-cachetools==5.3.1
-certifi==2023.5.7
-charset-normalizer==3.1
-cloudpickle==2.2.1
-colorama==0.4.6
-contourpy==1.0.7
-cvxpy==1.3.1
-cycler==0.11.0
-ecos==2.0.12
-filelock==3.10.7
-fonttools==4.39.4
-google-auth==2.20.0
-google-auth-oauthlib==1.0.0
-gym==0.26.2
-gym-notices==0.0.8
-idna==3.4
-importlib-resources==5.12.0
-Jinja2==3.1.2
-joblib==1.2.0
-kiwisolver==1.4.4
-Markdown==3.4.3
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-mpmath==1.3.0
-networkx==3.0
-numpy
-oauthlib==3.2.2
-opencv-python==4.7.0.72
-osqp
-packaging==23.1
-pandas==2.0.1
-Pillow
-protobuf==4.23.3
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pygame
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2023.3
+seaborn
 PyYAML
-qdldl==0.1.7
-requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
+pandas
+numpy
+torch
 scikit-learn
 scipy
-scs
-seaborn
-simpy
-six
-stable-baselines
+gym
+matplotlib
 sympy
-tensorboard
-tensorboard-data-server
-threadpoolctl 
-torch
-torch-tb-profiler
-tqdm
-typing_extensions
-tzdata
-urllib3
-Werkzeug
+simpy
+torch_geometric
